<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTheEquation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="bottom|end"
            android:text=""
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/char7"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/char8"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/char9"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/charDivide"
            android:textSize="24sp"
            app:cornerRadius="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/char4"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/char5"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/char6"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/charMultiply"
            android:textSize="24sp"
            app:cornerRadius="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:tag="1"
            android:text="@string/char1"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:tag="2"
            android:text="@string/char2"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:tag="3"
            android:text="@string/char3"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/charSubtract"
            android:textSize="24sp"
            app:cornerRadius="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:gravity="start|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="21"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/dot"
            android:textSize="24sp"
            android:visibility="invisible"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:tag="0"
            android:text="@string/char0"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/charAdd"
            android:textSize="24sp"
            app:cornerRadius="1dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="start|end"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnBKSP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:tag="0"
            android:text="@string/charBKSP"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btnCLR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/charCLR"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btnColor"
            android:padding="2dp"
            android:text="@string/charEqual"
            android:textSize="24sp"
            app:cornerRadius="1dp" />

    </LinearLayout>
</LinearLayout>